# NeuroWorkbench-5

./: .gitignore  README.md  pyproject.toml
.dbg/: realtime-app-segfault.env
docs/: band_power.md  brainflow_dsp.md  buffer.md  channel.md  dsp-hot-swap-design.md  export_pic.md  partial.md  smooth.md  svg_bug_fix.md
realtime_app/: main.py
realtime_app/app/: __init__.py  application_realtime.py  bcirealtimeapp_config.py
realtime_app/application/: __init__.py  application_realtime.py  bci_application.py  bcirealtimeapp_config.py
realtime_app/binder/: __init__.py  config_binder.py
realtime_app/configs/: __init__.py  config_detrend.py  config_device.py  config_fetcher.py  config_fft.py  config_filter.py  config_freqs_domain.py  config_picture.py  config_psd.py  config_recorder.py  config_spectrogram.py  config_theme.py  config_time_domain.py  config_view_freqs.py  config_view_time.py
realtime_app/device/: device_manager.py
realtime_app/dsp/: __init__.py  band_power_brainflow.py  band_power_scipy.py  detrend.py  detrend_brainflow.py  detrend_numpy.py  detrend_scipy.py  detrend_strategy.py  fft_brainflow.py  fft_rfft_scipy.py  fft_strategy.py  filter_brainflow.py  filter_sosfilt_scipy.py  filter_strategy.py  filters.py  filters_brainflow.py  filters_stream_iir.py  filters_stream_iir_full.py  filters_stream_iir_incremental.py  psd_brainflow.py  psd_shorttimefft_scipy.py  psd_strategy.py  psd_welch_brainflow.py  psd_welch_scipy.py  rereference_numpy.py  spectrogram.py  spectrum_brainflow.py
realtime_app/pipeline/: __init__.py  board_fetcher.py  data_chain.py  (+6 more)
(+38 files in other folders)
